# tradestation-python-client

./: .env.example  .gitignore  README.md  env.example  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
examples/: get_market_data_example.py  get_stream_bars.py  get_stream_quotes_example.py
src/: auth.py  base_client.py  client.py
src/endpoints/: broker.py  brokerage.py  market_data.py  market_data_stream.py  mkt_data.py  ts_stream.py
src/tradestation_api_python/: base_client.py
src/tradestation_api_python/endpoints/: ts_stream.py
src/tradestation_python_client/: auth.py  client.py  toolbox.py
src/tradestation_python_client/endpoints/: __init__.py  broker.py  mkt_data.py
test/: test_auth.py  test_brokerage.py  test_client.py  test_market_data.py  test_mkt_data.py  test_stream_base.py
