[project]
name = "tradestation-python-client"
version = "0.1.4"
description = "Python package for interacting with TradeStation APIs."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lorenzo Santarsieri" }]
requires-python = ">=3.10"
dependencies = [
    "pandas==2.3.3",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "rich==14.2.0"
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
